fixing proj spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1417,7 +1417,7 @@
 		font-size: 12pt;
 		font-weight: 400;
 		letter-spacing: 0.075em;
-		line-height: .5em;
+		line-height: 1em;
 	}
 
 		@media screen and (max-width: 1680px) {
